# mnist-classification

./: CMakeLists.txt  Module.cpp  Module.h  Variable.cpp  Variable.h  dataset.cpp  dataset.h  main.cpp  nn.cpp  nn.h  optim.cpp  optim.h  stat.cpp  stat.h  train.cpp  train.h
